Add volume mapping for todofy database in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
     container_name: todofy
     ports:
       - "10003:8080"
+    volumes:
+      - ./data/todofy.db:/todofy.db
     restart: always
     env_file: ./env/todofy.env
     networks:
