Update volume mapping for todofy service in docker-compose.yml to use bind type

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,9 @@ services:
     ports:
       - "10003:8080"
     volumes:
-      - ./data/todofy.db:/todofy.db
+      - type: bind
+        source: ./data/todofy.db
+        target: /todofy.db
     restart: always
     env_file: ./env/todofy.env
     networks:
