Simplify volume mapping syntax for todofy service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,9 +77,7 @@ services:
     ports:
       - "10003:8080"
     volumes:
-      - type: bind
-        source: ./data/todofy.db
-        target: /todofy.db
+      ./data/todofy.db:/todofy.db
     restart: always
     env_file: ./env/todofy.env
     networks:
